--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "classnames": "^2.2.5",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
+    "react-select": "^2.1.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0",
