--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.1.7",
+    "aws-amplify-react": "^2.1.1",
     "classnames": "^2.2.5",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
+    "react-autocomplete": "^1.8.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
+    "react-select": "^2.1.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0",
