--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^15.5.4",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.4",
+    "react-cookies": "^0.1.0",
     "react-dom": "^15.5.4",
+    "react-loader": "^2.4.5",
     "react-redux": "^5.0.4",
     "react-router": "3.0.5",
     "react-router-redux": "^4.0.8",
